--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">10,651</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">16,808</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">FlightBookingTest</td><td><a href="#m0">testThatResultsAppearForAOneWayJourney</a></td><td rowspan="1">1542212059869</td><td rowspan="1">10622</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testScripts.HotelBookingTestCase</td><td><a href="#m0">testSearchHotels</a></td><td rowspan="1">1542298328819</td><td rowspan="1">11473</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">FlightBookingTest#testThatResultsAppearForAOneWayJourney</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IndexOutOfBoundsException: Index: 0, Size: 0
-	at java.util.ArrayList.rangeCheck(ArrayList.java:653)
-	at java.util.ArrayList.get(ArrayList.java:429)
-	at FlightBookingTest.testThatResultsAppearForAOneWayJourney(FlightBookingTest.java:36)
+<h2>Default test</h2><h3 id="m0">testScripts.HotelBookingTestCase#testSearchHotels</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+	at pageLibrary.HotelBookingPage.enterLocalityAndCityName(HotelBookingPage.java:50)
+	at testScripts.HotelBookingTestCase.testSearchHotels(HotelBookingTestCase.java:22)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
