--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="FlightBookingTest" hash-for-method="testThatResultsAppearForAOneWayJourney">testThatResultsAppearForAOneWayJourney</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testScripts.HotelBookingTestCase" hash-for-method="testSearchHotels">testSearchHotels</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -120,18 +120,17 @@
           <div class="suite-Default_suite-class-failed">
             <div class="main-panel-header rounded-window-top">
               <img src="failed.png"/>
-              <span class="class-name">FlightBookingTest</span>
+              <span class="class-name">testScripts.HotelBookingTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testThatResultsAppearForAOneWayJourney">
-                  </a> <!-- testThatResultsAppearForAOneWayJourney -->
-                  <span class="method-name">testThatResultsAppearForAOneWayJourney</span>
-                  <div class="stack-trace">java.lang.IndexOutOfBoundsException: Index: 0, Size: 0
-	at java.util.ArrayList.rangeCheck(ArrayList.java:653)
-	at java.util.ArrayList.get(ArrayList.java:429)
-	at FlightBookingTest.testThatResultsAppearForAOneWayJourney(FlightBookingTest.java:36)
+                  <a name="testSearchHotels">
+                  </a> <!-- testSearchHotels -->
+                  <span class="method-name">testSearchHotels</span>
+                  <div class="stack-trace">java.lang.NullPointerException
+	at pageLibrary.HotelBookingPage.enterLocalityAndCityName(HotelBookingPage.java:50)
+	at testScripts.HotelBookingTestCase.testSearchHotels(HotelBookingTestCase.java:22)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -166,7 +165,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/8_/_vplw5bd1t1d8qf66ydkjbwm0000gn/T/testng-eclipse-1022334168/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/8_/_vplw5bd1t1d8qf66ydkjbwm0000gn/T/testng-eclipse--891974436/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -175,7 +174,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;FlightBookingTest&quot;/&gt;
+      &lt;class name=&quot;testScripts.HotelBookingTestCase&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -217,14 +216,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testThatResultsAppearForAOneWayJourney')
-data.setCell(0, 2, 'FlightBookingTest')
-data.setCell(0, 3, 10622);
+data.setCell(0, 1, 'testSearchHotels')
+data.setCell(0, 2, 'testScripts.HotelBookingTestCase')
+data.setCell(0, 3, 11473);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -250,13 +249,25 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">FlightBookingTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testScripts.HotelBookingTestCase</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">launchBrowser</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="configuration-test before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">5128 ms</span>
+              </div> <!-- configuration-test before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">testThatResultsAppearForAOneWayJourney</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-name">testSearchHotels</span>
+                <span class="method-start">5186 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">tearDownAppium</span>
+                <span class="method-start">16663 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
