--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fba89">  <td>18/11/14 21:44:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBookingTest.testThatResultsAppearForAOneWayJourney()[pri:0, instance:FlightBookingTest@156b88f5]">testThatResultsAppearForAOneWayJourney</td> 
-  <td>main@829149076</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>18/11/15 21:42:03</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:testScripts.HotelBookingTestCase@47c62251]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="9fba89">  <td>18/11/15 21:42:08</td>   <td>5124</td> <td>&nbsp;</td><td title="&gt;&gt;HotelBookingTestCase.setUp()[pri:0, instance:testScripts.HotelBookingTestCase@47c62251]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="9fba89">  <td>18/11/15 21:42:08</td>   <td>5181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HotelBookingTestCase.testSearchHotels()[pri:0, instance:testScripts.HotelBookingTestCase@47c62251]">testSearchHotels</td> 
+  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="d2e7d9">  <td>18/11/15 21:42:20</td>   <td>16659</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownAppium()[pri:0, instance:testScripts.HotelBookingTestCase@47c62251]">&lt;&lt;tearDownAppium</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
 </table>
