--- a/test-output/index.html
+++ b/test-output/index.html
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/8_/_vplw5bd1t1d8qf66ydkjbwm0000gn/T/testng-eclipse--271622257/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/8_/_vplw5bd1t1d8qf66ydkjbwm0000gn/T/testng-eclipse-346149372/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testSignInError')
 data.setCell(0, 2, 'testScripts.SignInTestCase')
-data.setCell(0, 3, 3506);
+data.setCell(0, 3, 2492);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,20 +221,16 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">testScripts.SignInTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">launchBrowser</span>
+                <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
-              <div class="configuration-test before">
-                <span class="method-name">setUpPage</span>
-                <span class="method-start">5646 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">testSignInError</span>
-                <span class="method-start">5692 ms</span>
+                <span class="method-start">10618 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
-                <span class="method-name">tearDownAppium</span>
-                <span class="method-start">9201 ms</span>
+                <span class="method-name">tearDown</span>
+                <span class="method-start">13113 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
