--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2e7d9">  <td>18/11/16 10:45:44</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.launchBrowser()[pri:0, instance:testScripts.SignInTestCase@47c62251]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>18/11/16 10:45:50</td>   <td>5639</td> <td>&nbsp;</td><td title="&gt;&gt;SignInTestCase.setUpPage()[pri:0, instance:testScripts.SignInTestCase@47c62251]">&gt;&gt;setUpPage</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>18/11/16 10:45:50</td>   <td>5685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTestCase.testSignInError()[pri:0, instance:testScripts.SignInTestCase@47c62251]">testSignInError</td> 
-  <td>main@1926764753</td>   <td></td> </tr>
-<tr bgcolor="d2e7d9">  <td>18/11/16 10:45:53</td>   <td>9194</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownAppium()[pri:0, instance:testScripts.SignInTestCase@47c62251]">&lt;&lt;tearDownAppium</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1926764753</td>   <td></td> </tr>
+<tr bgcolor="9fba89">  <td>18/11/20 16:17:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SignInTestCase.setUp()[pri:0, instance:testScripts.SignInTestCase@27efef64]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
+<tr bgcolor="9fba89">  <td>18/11/20 16:18:08</td>   <td>10612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTestCase.testSignInError()[pri:0, instance:testScripts.SignInTestCase@27efef64]">testSignInError</td> 
+  <td>main@1225439493</td>   <td></td> </tr>
+<tr bgcolor="9fba89">  <td>18/11/20 16:18:10</td>   <td>13108</td> <td>&nbsp;</td><td title="&lt;&lt;SignInTestCase.tearDown()[pri:0, instance:testScripts.SignInTestCase@27efef64]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
 </table>
