--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fba89">  <td>18/11/20 16:17:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;SignInTestCase.setUp()[pri:0, instance:testScripts.SignInTestCase@27efef64]">&gt;&gt;setUp</td> 
+<tr bgcolor="9fba89">  <td>18/11/20 20:20:10</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;FlightBookingTestCase.setUp()[pri:0, instance:testScripts.FlightBookingTestCase@27efef64]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>18/11/20 16:18:08</td>   <td>10612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignInTestCase.testSignInError()[pri:0, instance:testScripts.SignInTestCase@27efef64]">testSignInError</td> 
+<tr bgcolor="9fba89">  <td>18/11/20 20:20:15</td>   <td>4830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBookingTestCase.testSearchFlight()[pri:0, instance:testScripts.FlightBookingTestCase@27efef64]">testSearchFlight</td> 
   <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>18/11/20 16:18:10</td>   <td>13108</td> <td>&nbsp;</td><td title="&lt;&lt;SignInTestCase.tearDown()[pri:0, instance:testScripts.SignInTestCase@27efef64]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9fba89">  <td>18/11/20 20:20:29</td>   <td>18866</td> <td>&nbsp;</td><td title="&lt;&lt;FlightBookingTestCase.tearDown()[pri:0, instance:testScripts.FlightBookingTestCase@27efef64]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
 </table>
