--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testScripts.FlightBookingTestCase" hash-for-method="testSearchFlight">testSearchFlight</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testScripts.HotelBookingTestCase" hash-for-method="testSearchHotels">testSearchHotels</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testScripts.FlightBookingTestCase</span>
+              <span class="class-name">testScripts.HotelBookingTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testSearchFlight">
-                  </a> <!-- testSearchFlight -->
-                  <span class="method-name">testSearchFlight</span>
+                  <a name="testSearchHotels">
+                  </a> <!-- testSearchHotels -->
+                  <span class="method-name">testSearchHotels</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/8_/_vplw5bd1t1d8qf66ydkjbwm0000gn/T/testng-eclipse--2135847545/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/8_/_vplw5bd1t1d8qf66ydkjbwm0000gn/T/testng-eclipse-1863493435/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testScripts.FlightBookingTestCase&quot;/&gt;
+      &lt;class name=&quot;testScripts.HotelBookingTestCase&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testSearchFlight')
-data.setCell(0, 2, 'testScripts.FlightBookingTestCase')
-data.setCell(0, 3, 14032);
+data.setCell(0, 1, 'testSearchHotels')
+data.setCell(0, 2, 'testScripts.HotelBookingTestCase')
+data.setCell(0, 3, 20381);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,18 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testScripts.FlightBookingTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testScripts.HotelBookingTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">testSearchFlight</span>
-                <span class="method-start">4836 ms</span>
+                <span class="method-name">testSearchHotels</span>
+                <span class="method-start">5620 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18872 ms</span>
+                <span class="method-start">26004 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
